# Tasko

./: Logo.xcf  README.md
backend/: Cargo.toml  Makefile
backend/src/: main.rs  task.rs  timeline.rs
frontend/: .eslintrc.yml  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Banner.tsx  Content.tsx  Footer.tsx  HoverWrapper.tsx  UserMenu.tsx
frontend/src/components/Banner/: LoginButton.tsx  Route.tsx  Router.tsx
frontend/src/components/views/default/: ErrorContent.tsx
frontend/src/components/views/landing/: LandingContent.tsx
frontend/src/components/views/login/: Form.tsx  LoginContent.tsx
frontend/src/components/views/signup/: SignupContent.tsx
frontend/src/components/views/task/: TaskContent.tsx  TaskMenu.tsx  TaskViewer.tsx
frontend/src/etc/: TempStatics.json
frontend/src/styles/: App.css  Style.tsx
frontend/src/test/: App.test.tsx
frontend/src/types/: RouteData.tsx  Task.tsx
