[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.10"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3"
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"